--- a/app/views/pages/b_praxis.html.erb
+++ b/app/views/pages/b_praxis.html.erb
@@ -11,20 +11,20 @@
 <body>
 <div class="praxis">
 
-        <h1 class="praxis">Criteria of Edition for Berlin</h1>
+  <h1 class="praxis">Criteria of Edition for Berlin</h1>
 
-        <h2 class="praxis">&#10081; 1. Introduction</h2>
+  <h2 class="praxis">&#10081; 1. Introduction</h2>
 
         <p>For the Berlin Huon d'Auvergne, punctuation and citations are according to the general norms outlined in the overall document.</p>
         <p>However, the Berlin Huon d'Auvergne is very close to Old French. For that reason we keep close to the most respected norms for Old French editions. There are situations in which Old French norms do not work with the Franco-Italian text, so these are made explicit in the following list.</p>
 
-        <h2 class="praxis">&#10081; 2. Capitalization</h2>
+  <h2 class="praxis">&#10081; 2. Capitalization</h2>
 
         <p>Capitalization is as in French: of nouns, not adjectives for origins; thus, <em>le g[ra]nt Françoi</em> (v. 9042), but <em>la françoise gient</em> (v. 11494). We capitalize names of places, names of people, but not titles unless part of a place name (e.g., <em>saint Laçaron</em>, v. 2232, but <em>Saint Pol</em>, v. 7953). Names of God and Mary are capitalized, as are the pronominalized attributes used for them (<em>Diex</em>; <em>Marie</em>; <em>Verge</em>; <em>Crucifis</em>; etc.), but not pronouns refering to them.</p>
 
         <p>"v." designates a line number in order to  avoid confusion with the number one  that use of the English "l." could create (it looks too much like the number one), and "vv." stands for "lines."</p>
 
-        <h2 class="praxis">&#10081; 3. Punctuation in the MS</h2>
+  <h2 class="praxis">&#10081; 3. Punctuation in the MS</h2>
 
         <p>Periods appear at the end of most lines as well as before and after some names, rather inconsistently (e.g., Uliens., v. 10093; rois .agollāt., v. 10092). Similarly, numbers, here always Roman numerals (not Arabic), appear relatively consistently with periods around them: <br>
         <%= image_tag("b-vii-punct.png", alt: "b-vii-punct") %> (v. 10238).</p>
@@ -39,9 +39,9 @@
 
         <p>[...] represents missing text in the MS; there are incomplete lines and missing lines between completed lines.</p>
 
-        <p>< > are used for interpolations, either our additions, suggestions from other editors, or information gleaned from other sources. These are all annotated.</p>
+        <p>&lt; &gt; are used for interpolations, either our additions, suggestions from other editors, or information gleaned from other sources. These are all annotated.</p>
 
-        <h2 class="praxis">&#10081; 4. Abbreviations</h2>
+  <h2 class="praxis">&#10081; 4. Abbreviations</h2>
 
         <p>Berlin uses both a wide variety and frequent abbreviations, in comparison with, for example, the Roland V4 (Beretta xxiii-xxvii) or Aliscans (Holtus xxiii-xxiv). The frequency may be partially due to a difference in text length, but is also in general usage, with the result that the number of abbreviations in B's version of Huon is very large.</p>
 
@@ -80,10 +80,12 @@
               </tr>
               <tr>
                   <td>[ival]</td>
-                  <td>ch'r: <em>ch[ival]er</em>, <em>ch[ivale]rie</em> (<em>chivaler</em>, 6 appearances; <em>chivalerie</em>, once)</tr>
+                  <td>ch'r: <em>ch[ival]er</em>, <em>ch[ivale]rie</em> (<em>chivaler</em>, 6 appearances; <em>chivalerie</em>, once)</td>
+              </tr>
               <tr>
                   <td>[o]</td>
-                  <td>m'lt: <em>m[o]lt</em>, 7 (<em>molt</em>, 8 appearances; <em>molte</em> v. 1308)</td></tr>
+                  <td>m'lt: <em>m[o]lt</em>, 7 (<em>molt</em>, 8 appearances; <em>molte</em> v. 1308)</td>
+              </tr>
               <tr>
                   <td>[u]</td>
                   <td>sb'tāce: <em>s[u]bsta[n]ce</em> (cf. <em>substa[n]ce</em> v. 9889); sb'teīr: <em>s[u]bste[n]ir</em>; <em><b>D[omi]n[u]m</b></em></td>
@@ -303,8 +305,6 @@
 
               <p>The second (<em>q</em> with a slash on the descender) appears 28 times and is always resolved <em>q[ui]</em>, as attested by other forms of the same words in complete form for the most part, with 8 of those <em>qui</em> alone. The first (<em>q</em> with <em>i</em> above the line) appears 17 times and is resolved in <em>q[ui]</em> when subject. <em>q[ui]</em> alone can represent relative pronouns as subject ("who"); demonstrative pronouns (since <em>qui</em> also stands for the palatalized Modern Italian <em>quelli</em>, MSF <em>ceux</em>); the interrogative for a person; and the proverbial pronoun "he/she who." Other abbreviated forms—relative pronoun direct object, the conjunction, an interrogative for a thing or fact—are resolved <em>q[ue]</em>. Where the <em>u</em> is already present and the q bears an abbreviation, the final vowel follows the same rule. This means that 523 <em>q</em> with a dot or similar designation above were expanded as <em>q[ue]</em> in addition to those surmounted by an <em>i</em>. In Old French itself usage was not regular; Ménard notes that dialectal usage varied and is expliquable.<!-- FN: Philippe Ménard, Manuel du français du moyen âge, 1. syntaxe de l'ancien français (Sobodi, 1973), ¶64, "Remarques," p. 80. --></p>
 
-              <h4 class="praxis"></h4>
-
               <table>
                 <tr>
                     <td>[u]</td>
@@ -320,7 +320,7 @@
                 </tr>
                 <tr>
                   <td>[ui]</td>
-                  <td>for <em>q</em> with a slash on the descender. <em>conq[ui]sons</em> (cf. <em>conquis</em>, <em>conquist</em> 4, 2 appearances); <em>delinq[ui]re</em> (v. 3026);  <em>nasq[ui]</em> (<em>nasqui</em>, 3 appearances); <em>plaq[ui]ment</em> (<em>plaquiment/[n]t</em> 4 appearances); <em>q[ui]d</em> in Latin quote (see Lewis & Short <em>quis</em>, <em>quid</em>); <em>q[ui]ert</em> (<em>quiert</em> 10 appearances); <em>q[ui]s</em> (<em>quis 4 appearances); <em>req[ui]e[r]</em> (<em>requier 20 appearances); <em>sorq[ui]die (TL <em>sorquidier/<em>sorcuidier); <em>tra[n]q[ui]lima[n]t</em> (TL <em>tranquilité</em>; DELI <em>tranquillo</em>)</td>
+                  <td>for <em>q</em> with a slash on the descender. <em>conq[ui]sons</em> (cf. <em>conquis</em>, <em>conquist</em> 4, 2 appearances); <em>delinq[ui]re</em> (v. 3026);  <em>nasq[ui]</em> (<em>nasqui</em>, 3 appearances); <em>plaq[ui]ment</em> (<em>plaquiment/[n]t</em> 4 appearances); <em>q[ui]d</em> in Latin quote (see Lewis & Short <em>quis</em>, <em>quid</em>); <em>q[ui]ert</em> (<em>quiert</em> 10 appearances); <em>q[ui]s</em> (<em>quis</em> 4 appearances); <em>req[ui]e[r]</em> (<em>requier</em> 20 appearances); <em>sorq[ui]die</em> (TL <em>sorquidier</em>/<em>sorcuidier</em>); <em>tra[n]q[ui]lima[n]t</em> (TL <em>tranquilité</em>; DELI <em>tranquillo</em>)</td>
                 </tr>
               </table>
 
@@ -400,7 +400,7 @@
 
 
               <dl>
-                <dt><b>(e) above the line for [n](e)</b></dt>
+              <dt>(e) above the line for [n](e)</dt>
                   <dd>Alemag[n](e) 10583</dd>
                   <dd>apraig[n](e) 6515</dd>
                   <dd>armag[n](e) 5864</dd>
@@ -421,7 +421,7 @@
                   <dd>sovaig[n](e) 2512</dd>
                   <dd>vieg[n](e) 78</dd>
 
-                <dt>(e) above the line for [r](e), (e)[r], [r](i)</dt>
+              <dt>(e) above the line for [r](e), (e)[r], [r](i)</dt>
                   <dd>aut[r](e) 4430, 5120</dd>
                   <dd>aut[r](e)mans 5520</dd>
                   <dd>c[r](e)anter  10142</dd>
@@ -430,11 +430,11 @@
                   <dd>oscu[r](e) 10053</dd>
                   <dd>quat[r](e) 5828, 7129, 11036</dd>
 
-                <dt>(i) above the line for [r](i)</dt>
+              <dt>(i) above the line for [r](i)</dt>
                   <dd>p[r](i)nceps  10418</dd>
                   <dd>entrep[r](i) 6022</dd>
 
-                <dt>(o) above the line for [r]o</dt>
+              <dt>(o) above the line for [r]o</dt>
                   <dd>t[r](o)ve[r]a 1043</dd>
                   <dd>t[r](o)von 1173</dd>
                   <dd>t[r](o)veron 1331</dd>
@@ -460,41 +460,102 @@
                   <dd>t[r](o)ve[n]t 11543</dd>
                   <dd>t[r](o)sq[ue] 5180</dd>
 
-               <dt>(r) above the line --> vowel+r or r+vowel  (ur, re, ri, er)</dt>
+              <dt>(r) above the line --> vowel+r or r+vowel  (ur, re, ri, er)</dt>
                   <dd>c(r)[e]anter 10142</dd>
                   <dd>co[n]t[e](r) 12127</dd>
                   <dd>p(r)[i]nceps  10418</dd>
                   <dd>past[u](r)e[r]   8476</dd>
                   <dd>pereg(r)[i]nage 7248</dd>
 
-               <dt>(s) above the line --> [e](s)</dt>
+              <dt>(s) above the line --> [e](s)</dt>
                   <dd>te[m]p[e](s)t 2614</dd>
 
-               <dt>Special characters</dt>
-               <dt>Three particular characters are present in this MS</dt>
-               <dt>m drawn out into a "z" shape at the end of the word</dt>
+              <dt>Special characters</dt>
+              <dt>Three particular characters are present in this MS</dt>
+              <dt>m drawn out into a "z" shape at the end of the word</dt>
                   <dd>written as m with footnote (v. 5150) ; cf. <em>Conseils</em> fasc. I p. 28, # 11.</dd>
 
-               <dt>ӡ at the end of a word for [ue]</dt>
+              <dt>ӡ at the end of a word for [ue]</dt>
                  <dd><em>arciveʃqӡ</em> for <em>arcivesq[ue]</em> (19 plus possibly 1 erased; <em>arcivesqe</em> 7 appearances; <em>arcivesch</em> 1, <em>arcivesche</em> 1); <em>ci[n]cqӡ</em>  (once, v. 11668);  <em>jusq[ue]</em> and its combinations (57, all with final ӡ; <em>jusque</em>, <em>jusqe</em> 2 appearances each); <em>adonqӡ</em> for <em>adonq[ue]</em> (2); <em>donqӡ</em> (7); <em>fraciqӡ</em> (2); <em>enfraciqӡ</em> (1); <em>auqӡ</em> (1); <em>aveqӡ</em> (1); <em>tr/[r]osq[ue]</em>, <em>trosq[ue]mant</em> (18 total appearances; <em>trosch</em> 3 appearances; <em>trosqe</em> 4 appearances; <em>trosque</em> 1 appearance); <em>vesq[ue]</em> (3 appearances; <em>vesque</em> 2 appearances; <em>vesqe</em> 8 appearances; <em>vesque</em> 2; <em>vesch/e</em> twice also). There is one odd case with two abbreviations for the same thing: <em>auqӡ</em> that also has the line above the <em>q</em> (l. 3323).</dd>
 
-               <dt>j</dt>
+              <dt>j</dt>
                  <dd>at the end of Roman numerals for "one"; this is transcribed as "i" (<em>Conseils</em> 5a, p. 24).</dd>
+
+              <dt>Linked Bibliography</dt>
+                  <dd><a href="http://ducange.enc.sorbonne.fr">DuCange</a></dd>
+                  <dd><a href="https://ia801904.us.archive.org/35/items/LewisAndShortANewLatinDictionary/lewisandshort.pdf">Lewis &amp; Short</a></dd>
+                  <dd><a href="http://www.rialfri.eu/rialfriPHP/public/lessico/lessico">RIALFRI Lexicon</a></dd>
+                  <dd><a href="http://tlio.ovi.cnr.it/TLIO/">TLIO</a></dd>
+
+              <dt>Numbers</dt>
+                  <dd>In Berlin, larger numbers are written in Roman numerals (there are no Arabic numbers) and usually between dots (though this is not entirely consistent). We reproduce these in small roman numerals. However, larger numbers are sometimes surmounted by a "c" or an "m".  These we reproduce as superscripts of the roman numeral to facilitate reading: <%= image_tag("b-.x.-abbr.png", alt: "b-qnt-abbr.png") %> .x. with an m above, v. 9334).  In one case we find "or" after "iiii," clearly a representation of the Latin "quattuor" <%= image_tag("b-.iiii.-abbr.png", alt: "b-qnt-abbr.png") %> (v. 76).</dd>
 
              </dl>
 
+  <h2 class="praxis">&#10081; 5. Separation of words</h2>
+
+        <p>We follow standard practice for separation of words in early texts. The separation of words in the MS is varying and not always logical.</p> 
+
+              <ul class="praxis">
+                <li class="praxis">We join –ment/-mant to the adjective for adverbs.</li>
+                <li class="praxis">Three times, numbers larger than 100 appear written out: 186, 6536 and 11668. These we write in two words, as is the French usage, not the Italian (troi cent; cincque cent).</li>
+                <li class="praxis">Conjunctions are a more complicated matter, since editors tend to use the conventions of the language of edition, viz., French or Italian, which differ: fin que vs. finché, por que vs. perché, for example. In keeping with the nearness to Old French, we follow French conventions here.</li>
+                <li class="praxis">Prepositions are another element of possible difficulty. Again we follow French convention for those that exist in French, so for example, aval, amont; deci, dela, deprés. However, tutor, totore, etc. are written in one word, like tuttora, Old Italian; cf. Treccani, Enciclopedia Dantesca); same when tothore (< from Lat. HORA(M)). Similarly, enfra is the Italian, not the French enfre(s)ci a (TL); cf. other Franco-Italian texts like the Entrée d'Espagne; Geste Francor; Guerra d'Attila, Bovo d'Antona Laurenziana; cf. also infra, also found in Estoires de Venise, Aquilon de Baviere.</li>
+                <li class="praxis">Some expressions in their multiplicity require one decision because of the spelling; so for example, or endroit, which here we represent always as two words since it also appears as ore endroit.</li>
+                <li class="praxis">Common to Franco-Italian texts is the problem of the prosthetic e- before s + consonant: where there is an article or similar word before it, how should they be divided? Where an e-  before s + consonant is etymological, or a word does not exist in Italian, there is no decision to be made. Examining all the appearances of the word and related words may help make a determination; but it is possible to have multiple results and multiple versions of the same word; thus eschiere and schier, schiere; estraine and strange, stranges, straniors vs. estrange, estrainer. We have used the French form as much as possible.</li>
+                <li class="praxis">Other prefixes are more problematic, most especially a-. Verbal constructions that require the preposition a are difficult to separate from verbs beginning with that prefix, at a time when prefixes varied. Similarly, a simple past vs. a present perfect or a present tense (especially since chansons de geste vary extensively between historical present and past tenses) force decisions though they may not be significant for meaning. For example, is it il l'asegure or il la segure or il l'a seguré in v. 3047?  We use the context as much as possible—but here the immediate reference is la beste, so the pronoun could be feminine, and the other verb in the line is present, so we choose present tense. There are forms of both segurer and asegurer. On the other hand, we have two examples of vesque at the beginning of lines, with four others that could be either eve(s)que preceded by an elided form or ve(s)que preceded by a form ending in –e (de or le). Since the two begin a line, we have used that form for all. This is the principle that we follow where possible, to use the clear example when it exists.</li>
+                <li class="praxis">We presume en as the pronominal adverb and write s'en est following French, not Italian (which would be se n'est); thus also s'in oit, etc.</li>
+              </ul>
 
 
+        ******
 
-        	</em>
-          </em>
-          </em>
-          </em>
-          </em>
-          </td>
-          </tr>
-          </table>
-          </td>
-          </tr>
-          </table>
-        </div>
+Enclisis and proclisis
+ [to be continued]
+
+Pronouns
+
+  <h2 class="praxis">&#10081; 6. Diacritical signs</h2>
+
+Cedilla
+Acute accent
+Dieresis
+Circumflex
+Raised dot
+Apostrophe
+Angle brackets
+Round parentheses
+List of homographs
+
+  <h2 class="praxis">&#10081; 7. u/v and i/j</h2>
+
+  <h2 class="praxis">&#10081; 8. Emendations</h2>
+General categories
+List
+
+  <h2 class="praxis">&#10081; 9. Specific difficulties/considerations with this text</h2>
+
+[more here]
+
+Punctuation.
+In editing the text, strong differences became clear between US practices and those elsewhere. Since the project is funded by the US government and the Primary Investigators are American, their practices form the basis of the punctuation. That usage is informed by editing practice in both France and Italy for older texts. The following is a list of differences that we have found in consulting. We hope it will assist our continental colleagues in understanding our choices.
+• We have used US style quotes: double for primary speaker, single for quote within a quote. Quotes are normally announced by a comma; we have acceded to French tradition by using a comma within a line and a colon at the end of a line of verse.
+• Punctuation is within the quote marks, so a period is before the close quote. This is US format, which differs both from non-US English and from European usage.
+
+E.g.,   Huon said, "....Prester John said, '...'." 
+
+• There is no punctuation  (comma, colon or quote) when "that" precedes an indirect quote.
+
+    Huon said that he wanted to continue.
+
+• In a list, when individual items include details, we use a semicolon to allow commas within the list:
+
+Ynide accompanied Huon, her husband; Berart, Huon's cousin; Baudoin and Thomas, her brothers; and two hundred of Huon's men, to Paris.
+
+• In US English we use quotes "" to designate titles of articles and names of people. In French they use italics. Thus the titles of psalms are in bold, because italics instead show the resolution of abbreviations (not required in French editions: Conseils 1, 31).
+
+
+</div>
+</div>
+</body>
+</html>
