--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -65,10 +65,10 @@
             <h5 id="sub-header">Collaborating Institutions</h5>
 
               <div class="participant_section">
-                <a href="http://www.archiginnasio.it/">Biblioteca Comunale dell'Archiginnasio (Bologna, Italy)</a><br>
-                <a href="http://www.maru.firenze.sbn.it/">Biblioteca Marucelliana (Florence, Italy)</a><br>
-                <a href="http://www.bnto.librari.beniculturali.it/">Biblioteca Nazionale di Torino (Turin, Italy)</a><br>
-                <a href="http://www.bibliotecaseminariopda.it/">Biblioteca Antica del Seminario Vescovile di Padova (Padua, Italy)</a><br>
+                <a href="http://www.archiginnasio.it/">Biblioteca Comunale dell'Archiginnasio</a> (Bologna, Italy)<br>
+                <a href="http://www.maru.firenze.sbn.it/">Biblioteca Marucelliana</a> (Florence, Italy)<br>
+                <a href="http://www.bnto.librari.beniculturali.it/">Biblioteca Nazionale di Torino</a> (Turin, Italy)<br>
+                <a href="http://www.bibliotecaseminariopda.it/">Biblioteca Antica del Seminario Vescovile di Padova</a> (Padua, Italy)<br>
               </div>
 
             <h5 id="sub-header">Digital Humanities Scholars</h5>
@@ -77,7 +77,7 @@
                 <a href="http://library.wlu.edu/about/library-directory/mackenzie-brooks">Mackenzie Brooks</a> (Washington and Lee University)<br>
                 <a href="http://library.wlu.edu/about/library-directory/jason-mickel">Jason Mickel</a> (Washington and Lee University)<br>
                 <a href="http://library.wlu.edu/about/library-directory/jeff-barry">Jeff Barry</a> (Washington and Lee University)<br>
-                Brandon Walsh<a href="http://scholarslab.org/people/brandon-walsh/>Brandon Walsh"</a> (Scholars' Lab, University of Virginia)<br>
+                <a href="http://scholarslab.org/people/brandon-walsh/>Brandon Walsh">Brandon Walsh</a> (Scholars' Lab, University of Virginia)<br>
                 <a href="">Abdurrafey Khan</a> (Loyola University Chicago)
               </div>
 
