--- a/app/views/pages/bibliography.html.erb
+++ b/app/views/pages/bibliography.html.erb
@@ -121,7 +121,7 @@ Studies 70.1 (2015): 33-52.</li>
 <li class="biblio">Meregazzi, Luisa A. "L'Ugo d'Alvernia: Poema Franco-Italiano." Studi romanzi 27 (1937): 5-87.</li>
 <li class="biblio">Millardet, G. "Rev: F. Mainone, Laut- und Formenlehre in der Berliner franco-venezianischen Chanson de geste von Huon d'Auvergne. Erster Teil: Reimprüfung und Lautlehre. Inaugural-Dissertation zur Erlangung der Doktorwürde. Berlin: Universitäts Buchdruckerei von Gustav Schade, 1911." Revue des langues modernes 55 (1912): 125-128.</li>
 <li class="biblio">Möhren, Frank Walt. «Huon d'Auvergne» / «Ugo d'Alvernia» : Objet de la lexicographie française ou italienne?" Medioevo Romanzo 4 (1977): 312-325.</li>
-</ol><li class="biblio">Morgan, Leslie Zarker. “Les deux Romes de Huon d'Auvergne et le bon gouvernement.” In «Par deviers Rome m’en renvenrai errant»: Atti del XXème Congrès International de la Societé Rencesvals pour l’étude des épopées romanes (Rome, Italy, 20-25 July 2015). Ed. M. Careri, C. Menichetti, T. Rachetta. Viella, 2017. 579-91.
+<li class="biblio">Morgan, Leslie Zarker. “Les deux Romes de Huon d'Auvergne et le bon gouvernement.” In «Par deviers Rome m’en renvenrai errant»: Atti del XXème Congrès International de la Societé Rencesvals pour l’étude des épopées romanes (Rome, Italy, 20-25 July 2015). Ed. M. Careri, C. Menichetti, T. Rachetta. Viella, 2017. 579-91.
 <li class="biblio">Morgan, Leslie Zarker. “Le Roman d'Alexandre dans Huon d'Auvergne: tourisme et truismes dans une épopée du XIVe siècle.” In Epic Connections / Rencontres épiques Proceedings of the Nineteenth International Conference of the Société Rencesvals, Oxford, 13–17 August 2012. Ed. Marianne J. Ailes, Philip E. Bennett and Anne Elizabeth Cobby. Société Rencesvals British Branch Publications 7. Société Rencesvals British Branch, 2015. 509-27.
 <li class="biblio">Morgan, Leslie Zarker. "Si sai encor moult bon estoire, Chançon moult bone et anciene": Studies in the Text and Context of Old French Narrative in Honour of Joseph J. Duggan. Co-editor with Sophie Marnette and John F. Levy. The Society for the Study of Medieval Languages and Literature, 2015.
 <li class="biblio">Morgan, Leslie Zarker. “War is Hell (for Saracens): A Footnote to Aspremonts Afterlife in Italy.” In “Moult a sans et vallour”: Studies in Medieval French Literature in Honor of William W. Kibler. Ed. Monica L. Wright, Norris J. Lacy, and Rupert T. Pickens. Rodopi, 2012. 289-304.
@@ -181,9 +181,9 @@ Studies 70.1 (2015): 33-52.</li>
 
 <!--- ZOTERO BIBLIOGRAPHY
 
-<!--main content
-  <section class="row">
-  <div class="large-8 large-offset-2 columns">
+<!-- main content -->
+  <!-- <section class="row">
+  <div class="large-8 large-offset-2 columns"> -->
     <!-- Following line renders manually entered bibliography  -->
     <%#= render 'shared/old_bibliography' %>
     <!-- Following line renders zotero bibliography
