biblio_temp update SPM - with publications by LZM and SSB

--- a/app/views/pages/bibliography.html.erb
+++ b/app/views/pages/bibliography.html.erb
@@ -17,6 +17,8 @@
 <div class="biblio">
 <h2 class="biblio">Manuscripts</h2>
 
+<p>TEST</p>
+
 <ol class="biblio">
 <li class="biblio">Huon d’Auvergne. 1341. Kupferstichkabinett 78 D 8 (olim Ms. Hamilton 337). Berlin.</li>
 <li class="biblio">Huon d’Auvergne. N.d. Biblioteca del seminario Ms. 32. Padua.</li>
@@ -28,7 +30,7 @@
 
 
 <div class="biblio">
-<h2 class="biblio">Reference works</h2> 
+<h2 class="biblio">Reference works</h2>
 <p class="biblio">(In <b>BOLD</b> are standard abbreviations used in the field for reference, though entries are listed by authors' or editors' last names, by US MLA 8th edition conventions)</p>
 
 <ol class="biblio">
@@ -125,7 +127,7 @@ Studies 70.1 (2015): 33-52.</li>
 <li class="biblio">Morgan, Leslie Zarker. “Le Roman d'Alexandre dans Huon d'Auvergne: tourisme et truismes dans une épopée du XIVe siècle.” In Epic Connections / Rencontres épiques Proceedings of the Nineteenth International Conference of the Société Rencesvals, Oxford, 13–17 August 2012. Ed. Marianne J. Ailes, Philip E. Bennett and Anne Elizabeth Cobby. Société Rencesvals British Branch Publications 7. Société Rencesvals British Branch, 2015. 509-27.</li>
 <li class="biblio">Morgan, Leslie Zarker. "Si sai encor moult bon estoire, Chançon moult bone et anciene": Studies in the Text and Context of Old French Narrative in Honour of Joseph J. Duggan. Co-editor with Sophie Marnette and John F. Levy. The Society for the Study of Medieval Languages and Literature, 2015.</li>
 <li class="biblio">Morgan, Leslie Zarker. “War is Hell (for Saracens): A Footnote to Aspremonts Afterlife in Italy.” In “Moult a sans et vallour”: Studies in Medieval French Literature in Honor of William W. Kibler. Ed. Monica L. Wright, Norris J. Lacy, and Rupert T. Pickens. Rodopi, 2012. 289-304.</li>
-<li class="biblio">Morgan, Leslie Zarker. “Les Avatars de Guibourc II. Orable, Guibourc, Tiborga : Métamorphose d’une protagoniste littéraire française en Italie.” In In limine Romaniae : chanson de geste et épopée européenne, Actes du XVIIIe Congrès international de la Société Rencesvals pour l’étude des épopées romanes (20-24 juillet 2009). Éd. Carlos Alvar and Constance Cecile Carta. Peter Lang, 2011. 355-74.</li> 
+<li class="biblio">Morgan, Leslie Zarker. “Les Avatars de Guibourc II. Orable, Guibourc, Tiborga : Métamorphose d’une protagoniste littéraire française en Italie.” In In limine Romaniae : chanson de geste et épopée européenne, Actes du XVIIIe Congrès international de la Société Rencesvals pour l’étude des épopées romanes (20-24 juillet 2009). Éd. Carlos Alvar and Constance Cecile Carta. Peter Lang, 2011. 355-74.</li>
 <li class="biblio">Morgan, Leslie Zarker. “Literary Afterlives in Huon d'Auvergne: ‘The Art of [Dantean] Citation.’” In “Accessus ad auctores”: Studies in Honor of Christopher Kleinhenz. Ed. Fabian Alfie and Andrea Dini. ACMRS, 2011. 61-74.</li>
 <li class="biblio">Morgan, Leslie Zarker, ed. ‘La Geste Francor’: Chansons de geste of Ms. Marc. Fr. XIII (=256). Edition with glossary, introduction and notes. 2 vols. Medieval and Renaissance Texts and Studies, 2009.</li>
 <li class="biblio">Morgan, Leslie Zarker. “Le merveilleux destin de Guiborc dOrange.” Epic Studies: Acts of the Seventeenth International Congress of the Société Rencesvals for the Study of Romance Epic, July 22-28, 2006. Co-editor with Anne Berthelot (U. of Ct., Storrs), et. al. Special issue Olifant 25 (2006), 1-2 [2008]. 321-37.</li>
