SPM versioning page - changes post Sat night

--- a/app/views/pages/versioning.erb
+++ b/app/views/pages/versioning.erb
@@ -14,6 +14,8 @@
 
   <h1 class="praxis">&#10081; Huon d’Auvergne Digital Archive, version 1.0.0</h1>
 
+      <p>We update our website regularly with changes posting every Saturday evening.</p>
+      
       <p>We version our website according to the standards of Semantic Versioning, described in <a href="http://semver.org/">this document.</a></p>
 
   <h2 class="praxis">Version 1.0.0 Statement</h2>
