fix vre abbreviation in b.xml; Dash add Rajna tags to line 1434; SPM add time stamp in footer; SSB make a few changes in final laisse

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -28,4 +28,18 @@
 		</div>
 	</div>
 
+<script type="text/javascript">
+
+var m = "This page was last updated: " + document.lastModified;
+var p = m.length-8;
+document.writeln("<center>");
+document.write(m.substring(p, 0));
+document.writeln("</center>");
+
+</script>
+
+
+
+
+
 </div>
