SPM edit shelfnumber b.xml for intro page

--- a/app/views/pages/biblio_temp.html.erb
+++ b/app/views/pages/biblio_temp.html.erb
@@ -112,24 +112,22 @@
 					<li class="biblio">Graf, A. “Di un poema inedito di Carlo Martello e di Ugo conte d'Alvernia.” Giornale di Filologia Romanza 1 (1878): 92-110.</li>
 					<li class="biblio">Holden, Anthony J. Rev. of Günter Holtus, ed. La Versione franco-italiana della ‘Bataille d’Aliscans’: Codex Marcianus fr. VIII (=252). Tübingen: Niemeyer, 1985. Medium Ævum 56.2 (1987): 332- 34.</li>
 					<li class="biblio">Holtus, Günter. "Considerazioni sulla lingua dell’« Huon d’Auvergne» (B, T, P)." Cultura dell’Italia padana e la presenza francese nei secoli XIII-XV. (Pavia, 11-14 settembre 1994). Ed. Luigina Morini. Edizioni dell’Orso, 2001. 41-54.</li>
-					<li class="biblio">Holtus, Günter. "Ist das Franko-Italienische eine Sprache oder ein Dialekt?" Beiträge zum romanischen Mittelalter. Ed. Kurt Bldinger. Niemeyer, 79-97.</li>
+					<li class="biblio">Holtus, Günter. "Ist das Franko-Italienische eine Sprache oder ein Dialekt?" Beiträge zum romanischen Mittelalter. Ed. Kurt Baldinger. Niemeyer, 79-97.</li>
 					<li class="biblio">Holtus, Günter. Lexikalische Untersuchungen zur Interferenz: die franko-italienische Entrée d’Espagne. Niemeyer, 1979.</li>
 					<li class="biblio">Holtus, Günter. "Les problèmes posés par l’édition de textes franco-italiens. À propos de quelques leçons problématiques de V 4, V 8, et d’autres manuscrits." Au Carrefour des routes d’Europe: La chanson de geste. Xe Congrès international de la Société Rencesvals pour l’étude des épopées romanes. Strasbourg 1985. Cuer Ma, 1987. Vol. 2, 675-96.</li>
 					<li class="biblio">Holtus, Günter, ed. La Versione franco-italiana della ‘Bataille d’Aliscans’: Codex Marcianus fr. VIII (=252). Niemeyer, 1985. Beihefte zur Zeitschrift für romanische Philologie 205.</li>
-					<li class="biblio">Holtus, Günter, and Peter Wunderli. Les Épopées Romanes. Dir. Rita Lejeune, Jeanne Wathelet-Willem, Henning
-					Krauss. Tome 1 / 2, Fascicule 10. Grundriss der romanischen Literaturen des Mittelalters 10. Franco-italien et épopée franco-italienne. Winter, 2005.</li>
+					<li class="biblio">Holtus, Günter, and Peter Wunderli. Les Épopées Romanes. Dir. Rita Lejeune, Jeanne Wathelet-Willem, Henning Krauss. Tome 1 / 2, Fascicule 10. Grundriss der romanischen Literaturen des Mittelalters 10. Franco-italien et épopée franco-italienne. Winter, 2005.</li>
 					<li class="biblio">Krauss, Henning. Epica feudale e pubblico borghese. Per la storia poetica di Carlomagno in Italia. Trans. Andrea Fassò. Liviana Editrice, 1980.</li>
 					<li class="biblio">Ludovisi, Idido. L'Ugo d'Alvernia secondo il codice franco-italiano della biblioteca vescovile di Padova. Mele, 1895.</li>
 					<li class="biblio">Mainone, Friedrich. Formenlehre und Syntax in der Berliner franco-venezianischen Chanson de geste von Huon d'Auvergne. Verlag Robert Noske, Borna Bez, 1936.</li>
 					<li class="biblio">Mainone, Friedrich. Laut- und Formenlehre in der Berliner franco-venezianischen Chanson de geste von Huon d'Auvergne. Erster Teil: Reimprüfung und Lautlehre. Inaugural-Dissertation zur Erlangung der Doktorwürde. Berlin: Universitäts Buchdruckerei von Gustav Schade, 1911.</li>
+					<li class="biblio">Martin da Canal. <cite>Les estoires de Venise: cronaca veneziana in lingua francese dalle origini al 1275</cite>. Ed. Alberto Limentani. Florence: L.S. Olschki, 1972.</li>
 					<li class="biblio">McCormick, Stephen P. "The ‘Franco-Italian’ Epic in Medieval Lombardia." Diss. U of Oregon, 2011.</li>
 					<li class="biblio">McCormick, Stephen P. The Manuscript Tradition and Reception of the Huon d’Auvergne, a Franco-Italian romance-epic. The French of Italy.</li>
-					<li class="biblio">McCormick, Stephen P. "Peregrinatio animae: Cartographic Spaces and Epistemological Debates in the Franco-Italian Huon
-					d'Auvergne." Francigena 3 (2017): 79-109.</li>
+					<li class="biblio">McCormick, Stephen P. "Peregrinatio animae: Cartographic Spaces and Epistemological Debates in the Franco-Italian Huon d'Auvergne." Francigena 3 (2017): 79-109.</li>
 					<li class="biblio">McCormick, Stephen P. "Les humanités numériques et la tradition manuscrite de Huon d'Auvergne." Actes du XXème Congrès
 					International de la Société Rencesvals pour l'Étude des Épopées Romanes (Rome, Università di Roma- La
-					Sapienzia, 20-24 juillet 2015). Eds. Maria Careri, Caterina Menichetti, and Maria Teresa Rachetta. Naples:
-					Viella, 2017, pp. 571-78.</li>
+					Sapienzia, 20-24 juillet 2015). Eds. Maria Careri, Caterina Menichetti, and Maria Teresa Rachetta. Naples: Viella, 2017, pp. 571-78.</li>
 					<li class="biblio">McCormick, Stephen P. "A Contextual Analysis of Two Franco-Italian Manuscripts of the Huon d'Auvergne Romance Epic."
 					Digital Philology 5.2 (2016): 208-27.</li>
 					<li class="biblio">McCormick, Stephen P. "A Guide to Digital Medieval Studies in North America." Le Moyen Âge en Amerique du Nord, Spec.
