--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -28,6 +28,8 @@
 		</div>
 	</div>
 
+	<div class="date-stamp">
+
 <script type="text/javascript">
 
 var m = "This page was last updated: " + document.lastModified;
@@ -38,8 +40,6 @@ document.writeln("</center>");
 
 </script>
 
-
-
-
+</div>
 
 </div>
