--- a/app/assets/stylesheets/app.css
+++ b/app/assets/stylesheets/app.css
@@ -217,6 +217,10 @@ p.intro {
 	font-style: normal;
 	font-weight: 400;
 	margin-top: 25%;
+	line-height: 1.6;
+	text-align: justify;
+	text-rendering: optimizeLegibility;
+
 }
 
 hr {
