--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -7,13 +7,19 @@
         <li><%= link_to 'Bibliography', biblio_temp_path(), class: "nav" %></a></li>
 
         <li class="dropdown">
+          <a class="nav" href="javascript:void(0)" class="dropbtn">Translation</a>
+          <div class="dropdown-content">
+            <a class="nav" href="#"><%= link_to 'Berlin Translation', b_translation_path() %></a>
+          </div>
+        </li>
+
+        <li class="dropdown">
           <a class="nav" href="javascript:void(0)" class="dropbtn">Editions</a>
           <div class="dropdown-content">
             <a class="nav" href="#"><%= link_to 'Berlin (B)', b_manuscript_path() %></a>
             <a class="nav" href="#"><%= link_to 'Turin (T)', t_manuscript_path() %></a>
             <a class="nav" href="#"><%= link_to 'Padua (P)', p_manuscript_path() %></a>
             <a class="nav" href="#"><%= link_to 'Barbieri Fragment (Br)', br_manuscript_path() %></a>
-            <a class="nav" href="#"><%= link_to 'Berlin Translation', b_translation_path() %></a>
             <!-- <a class="nav" href="#"><%= link_to 'Hell Scene Comparison', hell_scene_path() %></a> -->
           </div>
         </li>
